Add new route to set/unset an app version as routable
